syntax = "proto3";
import "login.proto";
import "user.proto";
import "verify_token.proto";
import "change_password.proto";


package auth;
option go_package = "auth-service/internal/grpc/proto/auth";

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc CreateUser(UserRequest) returns (UserResponse);
  rpc UpdateUser(UserRequest) returns (UserResponse);
  rpc VerifyToken(VerifyTokenRequest) returns (VerifyTokenResponse);
  rpc ChangePassword(ChangePasswordRequest)  returns (ChangePasswordResponse);
}